# ollama-cli

./: Cargo.toml  README.md
src/: main.rs  ollama.rs  search.rs
