[package]
name = "ollama-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json", "blocking", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio-stream = "0.1"
futures = "0.3"
dirs = "6"
once_cell = "1"

[features]
default = []
